# Meta-x-OpenEnv-x-Pytorch-Hackathon

./: .gitignore  HF_SPACE_DEPLOYMENT.md  HF_TRAINING.md  OpsSim_Before_vs_After_training.ipynb  OpsSim_Training_Pipeline.ipynb  OpsSim_inference_Before_vs_After.ipynb  README.md  TRAINING_README.md  __init__.py  env.py  evaluate.py  generate_sft_dataset.py  grpo_reward_review.md  inference.py  instructions.md  models.py  multi_agent.py  openenv.yaml  plot_training_logs.py  pyproject.toml  requirements.txt  run_trained_inference.py  submit_hf_job.py  temp.py  test_inference_fix.py  train.py  train_details.md  train_grpo.py  train_sft.py  training_analysis.md  training_logging.py
eval_results/: results.json
plots/: adapter_config.json  completion_samples.jsonl  dataset_profile.json  final_metrics.json  plot_manifest.json  reward_components.jsonl  run_meta.json  summary.json  train_metrics.jsonl
plots/qwen-1.5b/: plot_captions.json  plot_manifest.json
plots/qwen25-3b-full/: plot_manifest.json
plots/qwen25-3b-grpo/: plot_manifest.json
server/: app.py
server/plots/: plot_manifest.json
tasks/: cascade.json
