[project]
name = "opssim_ai"
version = "2.0.0"
description = "OpsSim-AI: 9-Agent Distributed War Room — Cascading Failure System"
requires-python = ">=3.11"
authors = [{ name = "Sandeep, Venkatesh, Nithish" }]
dependencies = [
    "pydantic",
    "openai",
    "requests",
    "python-dotenv",
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "fastapi",
    "uvicorn"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["env", "models", "inference", "multi_agent", "train"]

[tool.setuptools.packages.find]
include = ["server"]
