[project]
name = "opssim_ai"
version = "2.0.0"
description = "OpsSim-AI: 9-Agent Distributed War Room — Cascading Failure System"
requires-python = ">=3.11"
authors = [{ name = "Sandeep, Venkatesh, Nithish" }]
dependencies = [
    "pydantic",
    "huggingface_hub",
    "openai",
    "requests",
    "python-dotenv",
    "openenv-core==0.2.3",
    "fastapi",
    "uvicorn",
    "torch",
    "transformers>=5.2.0",
    "trl>=1.2.0",
    "datasets",
    "peft",
    "accelerate",
    "jmespath"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["env", "models", "inference", "multi_agent", "train", "train_sft", "train_grpo", "generate_sft_dataset"]

[tool.setuptools.packages.find]
include = ["server"]
